Finished HTML for Home page

--- a/index.html
+++ b/index.html
@@ -76,10 +76,101 @@
   <section class="silly-section">
     
     <div class="wrapper">
-      
-    </div>
 
+      <div class="silly-column silly-column-1">
+        <div class="silly-icon silly-icon 1">
+          <img src="" alt="">
+        </div>
+        <div class="silly-text silly-text-1">
+          <h2>Customized Offers</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus ab sequi mollitia soluta non eveniet obcaecati numquam culpa eos, optio nihil veniam sint cumque est officia inventore libero voluptate delectus.</p>
+        </div>
+      </div> <!-- end column 1 -->
 
-  </section>
+      <div class="silly-column silly-column-2">
+        <div class="silly-icon silly-icon-2">
+          <img src="" alt="">
+        </div>
+        <div class="silly-text silly-text-2">
+          <h2>Community</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi molestias maxime, dicta laudantium iste iusto quod esse enim deserunt accusamus mollitia iure neque, numquam ducimus ipsa excepturi. Corporis, eos eius!</p>
+        </div>
+      </div><!-- end of column 2 -->
+
+      <div class="silly-column silly-column-3">
+        <div class="silly-icon silly-icon-3">
+          <img src="" alt="">
+        </div>
+        <div class="silly-text silly-text-3">
+          <h2>Blog</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id animi repudiandae aut soluta quibusdam illum, ad beatae perferendis quam neque ipsa labore ratione assumenda, numquam dolore quis blanditiis aliquid eveniet?</p>
+        </div>
+      </div><!-- end of column 3 -->
+
+      <div class="silly-column silly-column-4">
+        <div class="silly-icon silly-icon-4">
+          <img src="" alt="">
+        </div>
+        <div class="silly-text silly-text-4">
+          <h2>Get in Touch</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde quod repudiandae doloremque iste amet magnam temporibus explicabo possimus perferendis, totam, sapiente illo. Adipisci accusantium maxime ratione veritatis quis vero.</p>
+        </div>
+      </div><!-- end of column 4 -->
+    </div><!-- end of wrapper -->
+  </section><!-- end of silly section -->
+
+  <!-- About Section -->
+
+  <section class="about-section">
+    <div class="wrapper">
+
+      <div class="about-img img-1">
+        <img src="./assets/left-image.jpg" alt="White chairs with holes in the back pushed into a table with a little tree sapling in the center">
+      </div>
+
+      <div class="about-text about-text-1">
+        <h2>Group Programs</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, architecto accusamus earum fugit eius commodi. Illum quis totam magni veniam hic, aspernatur maxime veritatis dicta consequatur commodi, doloribus impedit in!</p>
+        <button>Read More</button>
+      </div>
+
+      <div class="about-text about-text-2">
+        <h2>New Locations</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, architecto accusamus earum fugit eius commodi. Illum quis totam magni veniam hic, aspernatur maxime veritatis dicta consequatur commodi, doloribus impedit in!</p>
+        <button>Read More</button>
+      </div>
+
+      <div class="about-img img-2">
+        <img src="./assets/right-image.jpg" alt="White chairs with holes in the back pushed into a table with a little tree sapling in the center">
+      </div>
+    </div><!-- end of wrapper -->
+  </section><!-- end of about section -->
+
+    <!-- Background image section -->
+
+  <section class="background-section">
+
+  </section> <!-- end of background section -->
+
+    <!-- Search Section -->
+  
+  <section class="search-section">
+    <div class="wrapper">
+      <div class="search-container">
+        <h2>Search by style</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, voluptatem. Suscipit totam harum dignissimos ratione sequi reiciendis dolor ducimus eveniet. Impedit fuga nostrum nisi corporis pariatur beatae itaque quibusdam ipsa!</p>
+        <button>Find Out More</button>
+      </div>
+    </div> <!-- end of wrapper -->
+  </section><!-- end of search section -->
+
+  <!-- Footer -->
+
+  <footer>
+
+    <p>Copyright 2019 HackerYou</p>
+
+  </footer>
+
 </body>
 </html>
