Started Blog Page

--- a/blog.html
+++ b/blog.html
@@ -9,5 +9,75 @@
 </head>
 <body>
   
+  <!-- Header Section -->
+  <header>
+    <div class="wrapper">
+      <div class="header-top">
+        <h3>Sanctuary Helpers</h3>
+        <nav>
+          <ul>
+            <li>
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <a href="">About</a>
+            </li>
+            <li>
+              <a href="">Blog</a>
+            </li>
+            <li>
+              <a href="">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <h1>BLOG</h1>
+    </div> <!-- wrapper end -->
+  </header> <!-- end of header -->
+  <main>
+
+    <!-- Blog Section -->
+
+    <section class="blog-section">
+      <div class="wrapper">
+
+        <div class="blog-left">
+          <div class="blog-left-img">
+            <img src="./assets/blog-post-image.jpg" alt="blue chair with white cushions on top of a diamond patterned rug">
+          </div>
+          <div class="blog-left-text">
+            <h2>Finding the right pieces for new space</h2>
+            <h5>Monday, October 5th, 2019 by Saron</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, repellat pariatur dolore modi veritatis autem est debitis deleniti similique eum suscipit inventore et libero, sint fugiat labore vitae cumque id.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit eligendi modi quis earum quos recusandae autem similique blanditiis non dolores consequuntur minus quasi, error cum distinctio eveniet, ex sapiente necessitatibus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit libero, ipsa labore aliquid cum fuga porro ullam eius voluptatibus exercitationem iste. Nesciunt aut provident in? Excepturi aut ea reprehenderit et!
+            Commodi sit tempora magni libero ut illo repudiandae autem, ea totam enim in aut, expedita possimus itaque dignissimos praesentium non porro nihil rerum iusto saepe natus sequi recusandae culpa? Rem?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae debitis labore aspernatur, hic facilis laborum cumque suscipit dolorum corporis obcaecati quia repellat harum eaque neque maxime! Alias, at neque!</p>
+          </div>
+        </div> <!-- end blog left -->
+        <div class="blog-right">
+          <div class="blog-right-img">
+            <img src="./assets/sidebar-image.jpg" alt="copper colored light fixture with a wire design">
+          </div>
+          <div class="blog-text-right">
+            <h3>Our Mission</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dicta suscipit laborum impedit minima expedita accusantium, explicabo exercitationem ducimus et aut maiores voluptas pariatur quaerat voluptates adipisci consectetur deleniti quia?</p>
+          </div>
+          <div class="blog-list-right">
+            <h3>Recent Posts</h3>
+            <ul>
+              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
+              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
+              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
+              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
+            </ul>
+          </div>
+        </div>
+
+      </div> <!-- end of wrapper -->
+    </section> <!-- end of blog section -->
+  </main>
+
+  
 </body>
 </html>
