Started comment section on the blog page

--- a/blog.html
+++ b/blog.html
@@ -76,6 +76,36 @@
 
       </div> <!-- end of wrapper -->
     </section> <!-- end of blog section -->
+
+      <!-- Comment Section -->
+
+    <section class="comment-section">
+      <div class="wrapper">
+
+        <h3>Comments:</h3>
+        <div class="comments-container">
+
+          <div class="comment comment-1">
+            <div class="comment-img comment-image-1">
+              <img src="./assets/comment-image.jpg" alt="a person with short hair posing for a photo">
+            </div>
+            <div class="comment-text comment-text-1">
+              <h5>Tuesday October 9th,2019 By Davin</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, at veritatis nemo corporis aspernatur rem! Dolorem doloremque ducimus non distinctio aliquid perspiciatis sunt tenetur nam facere obcaecati. Ab, totam ut.</p>
+            </div>
+          </div> <!-- end of comment 1 -->
+          <div class="comment comment-2">
+            <div class="comment-img content-img-2">
+              <img src="./assets/comment-image2.jpg" alt="two zebras in a field">
+            </div>
+            <div class="comment-text comment-text-2">
+
+            </div>
+          </div>
+        </div> <!-- end of comment container -->
+
+      </div> <!-- end of wrapper -->
+    </section> <!-- end of comment section -->
   </main>
 
   
