Finished HTML for blog page

--- a/blog.html
+++ b/blog.html
@@ -99,15 +99,37 @@
               <img src="./assets/comment-image2.jpg" alt="two zebras in a field">
             </div>
             <div class="comment-text comment-text-2">
-
+              <h5>Wednesday October 10th, 1029 By lisa</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eligendi deserunt dolore, temporibus cupiditate doloremque animi ex delectus blanditiis ducimus ipsa vitae quaerat natus. Assumenda tempora neque cupiditate quam aliquam.</p>
             </div>
-          </div>
+          </div> <!-- end of comment 2 -->
         </div> <!-- end of comment container -->
-
+        <div class="name-email-container">
+          <form action="#" method="#" class="blog-name-form" name="blog-name-form">
+            <label for="blog-username">Name</label>
+            <input type="text" id="blog-username" name="blog-username">
+          </form>
+          <form action="#" method="#" class="blog-email-form">
+            <label for="blog-email">Email Address</label>
+            <input type="text" name="blog-email" id="blog-email">
+          </form>
+        </div> <!-- end of email and username container -->
+        <div class="comment-box-container">
+          <form action="#" method="#" class="blog-comment-form" name="blog-comment-form">
+            <label for="blog-comment-box">Comment</label>
+            <input type="text" name="blog-comment-box" id="blog-comment-box">
+          </form>
+        </div><!-- end of comment box  -->
+        <button>Post Comment</button>
       </div> <!-- end of wrapper -->
     </section> <!-- end of comment section -->
   </main>
 
+    <!-- Footer Section -->
+
+  <footer>
+    <p> Copyright of 2019 HackerYou</p>
+  </footer>
   
 </body>
 </html>
