--- a/blog.html
+++ b/blog.html
@@ -10,20 +10,20 @@
 <body>
   
   <!-- Header Section -->
-  <header>
+  <header id="blog">
     <div class="wrapper">
       <div class="header-top">
-        <h3>Sanctuary Helpers</h3>
+        <h2>Sanctuary Helpers</h2>
         <nav>
           <ul>
             <li>
-              <a href="#home">Home</a>
+              <a href="/index.html">Home</a>
             </li>
             <li>
               <a href="">About</a>
             </li>
             <li>
-              <a href="">Blog</a>
+              <a href="#blog">Blog</a>
             </li>
             <li>
               <a href="">Contact</a>
