--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <a href="#home">Home</a>
           </li>
           <li>
-            <a href="">About</a>
+            <a href="#about">About</a>
           </li>
           <li>
-            <a href="">Blog</a>
+            <a href="/blog.html">Blog</a>
           </li>
           <li>
-            <a href="">Contact</a>
+            <a href="/contact.html">Contact</a>
           </li>
         </ul>
       </nav>
@@ -122,7 +122,7 @@
 
     <!-- About Section -->
 
-    <section class="about-section">
+    <section class="about-section" id="about">
       <div class="wrapper">
 
         <div class="about-img img-1">
