--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <div class="discover-text">
           <h2>Discovering New Materials</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos possimus quibusdam, quia illum alias doloremque facilis necessitatibus ad rerum molestias quaerat porro totam, nostrum tempora, eligendi quisquam. In, est? Consequatur?
-          Nulla impedit numquam consectetur dolorum quod quisquam, ipsam culpa ad? Dolore saepe aspernatur quaerat commodi ducimus debitis hic quibusdam ex amet quidem, error adipisci porro atque itaque ratione libero repellat.</p>
+          Nulla impedit numquam consectetur dolorum quod quisquam, ipsam culpa ad? Dolore saepe aspernatur quaerat commodi ducimus debitis hic quibusdam ex amet quidem, error adipisci porro atque itaque ratione libero repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima omnis quibusdam voluptatem eveniet quod aut suscipit, laudantium enim nihil, dolorem vitae id animi eos culpa, aliquid quidem fuga cupiditate explicabo.
+          Odit sed perferendis reprehenderit doloribus, quibusdam qui officiis sint dolores unde corrupti omnis ea ex iste distinctio est optio minima. Beatae consequatur perferendis odio possimus quisquam dignissimos aut ea illum!</p>
           <button class="discover-button">Discover More</button>
         </div>
         <div class="discover-img">
