Finshed header, and started gallery

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
     <section class="gallery-section">
       <div class="wrapper">
-        <div class="gallery-img-1">
+        <div class="gallery-img gallery-img-1">
           <img src="./assets/gallery-image-1.jpg" alt="green dresser in front of a white brick wall with some items used as decoration">
         </div>
-        <div class="gallery-img-2">
+        <div class="gallery-img gallery-img-2">
           <img src="./assets/gallery-image-2.jpg" alt="living area, complete with a orange couch, a dark brown wicker table">
         </div>
-        <div class="gallery-img-3">
+        <div class="gallery-img gallery-img-3">
           <img src="./assets/gallery-image-3.jpg" alt="a grey chair made up of strings?">
           <!-- COME BACK TO THIS DESCRIPTION -->
         </div>
