started silly section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="silly-column silly-column-1">
           <div class="silly-icon silly-icon 1">
-            <img src="" alt="">
+            <img src="./assets/houseIcon.svg" alt="icon of a house">
           </div>
           <div class="silly-text silly-text-1">
             <h2>Customized Offers</h2>
@@ -91,7 +91,7 @@
 
         <div class="silly-column silly-column-2">
           <div class="silly-icon silly-icon-2">
-            <img src="" alt="">
+            <img src="./assets/communityIcon.svg" alt="Icon with 3 people">
           </div>
           <div class="silly-text silly-text-2">
             <h2>Community</h2>
@@ -101,7 +101,7 @@
 
         <div class="silly-column silly-column-3">
           <div class="silly-icon silly-icon-3">
-            <img src="" alt="">
+            <img src="./assets/blogIcon.svg" alt="icon with a peice of paper">
           </div>
           <div class="silly-text silly-text-3">
             <h2>Blog</h2>
@@ -111,7 +111,7 @@
 
         <div class="silly-column silly-column-4">
           <div class="silly-icon silly-icon-4">
-            <img src="" alt="">
+            <img src="./assets/phoneIcon.svg" alt="Icon of a phone">
           </div>
           <div class="silly-text silly-text-4">
             <h2>Get in Touch</h2>
