--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sanctuary Helpers</title>
   <link rel="stylesheet" href="styles/styles.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
   <!-- Header Section -->
 
-  <header id="home">
+  <header id="home" class="homepage-header">
     <div class="wrapper">
       <nav>
         <ul>
@@ -160,7 +160,10 @@
       <div class="wrapper">
         <div class="search-container">
           <h2>Search by style</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt, voluptatem. Suscipit totam harum dignissimos ratione sequi reiciendis dolor ducimus eveniet. Impedit fuga nostrum nisi corporis pariatur beatae itaque quibusdam ipsa!</p>
+          <p>Lorem ipsum dolor, sit amet consecte Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis delectus soluta odio veniam laboriosam ess
+            e ut id magnam dolores sequi et consectetur at, adipisci incidunt! Illo nesciunt magnam ducimus eligendi. tur adipisicing elit. Deserunt, voluptatem. Suscipit totam harum dignissimos 
+            ratione sequi reiciendis dolor ducimus eveniet. Impedit fuga nostrum nisi corporis 
+            pariatur beatae itaque quibusdam ipsa!</p>
           <button>Find Out More</button>
         </div>
       </div> <!-- end of wrapper -->
@@ -176,6 +179,5 @@
     <p>Copyright 2019 HackerYou</p>
 
   </footer>
-
 </body>
 </html>
