--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./styles/styles.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   
   <!-- Header Section -->
-  <header id="blog">
+  <header id="blog" class="blog-header">
     <div class="wrapper">
       <div class="header-top">
         <h2>Sanctuary Helpers</h2>
@@ -39,8 +39,7 @@
 
     <!-- Blog Section -->
 
-    <section class="blog-section">
-      <div class="wrapper">
+    <section class="blog-section">  
 
         <div class="blog-left">
           <div class="blog-left-img">
@@ -62,20 +61,18 @@
           </div>
           <div class="blog-text-right">
             <h3>Our Mission</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dicta suscipit laborum impedit minima expedita accusantium, explicabo exercitationem ducimus et aut maiores voluptas pariatur quaerat voluptates adipisci consectetur deleniti quia?</p>
+            <p>Lorem ipsum dolceat dicta suscipit laborum impedit minima expedita accusantium, explicabo exercitationem ducimus et aut maiores voluptas pariatur quaerat voluptates adipisci consectetur deleniti quia?</p>
           </div>
           <div class="blog-list-right">
             <h3>Recent Posts</h3>
             <ul>
-              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
-              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
-              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
-              <li>hdiahdia dhiadhaid hdiadhia dahi</li>
+              <li>hdiahdia dhiadhaid hdi</li>
+              <li>hdiahdia dhiadhaid hdiadhii</li>
+              <li>hdiahdia dhiadhaid hdiadhihi</li>
+              <li>hdiahdia dhiadhaid hdia</li>
             </ul>
           </div>
         </div>
-
-      </div> <!-- end of wrapper -->
     </section> <!-- end of blog section -->
 
       <!-- Comment Section -->
@@ -105,22 +102,26 @@
             </div>
           </div> <!-- end of comment 2 -->
         </div> <!-- end of comment container -->
-        <div class="name-email-container">
-          <form action="#" method="#" class="blog-name-form" name="blog-name-form">
-            <label for="blog-username">Name</label>
-            <input type="text" id="blog-username" name="blog-username">
-          </form>
-          <form action="#" method="#" class="blog-email-form">
-            <label for="blog-email">Email Address</label>
-            <input type="text" name="blog-email" id="blog-email">
-          </form>
-        </div> <!-- end of email and username container -->
+        <div class="blog-forms-container">
+          <div class="name-email-container">
+            <form action="#" method="#" class="blog-name-form" name="blog-name-form">
+              <label for="blog-username">Name</label>
+              <input type="text" id="blog-username" name="blog-username">
+            </form>
+            <form action="#" method="#" class="blog-email-form">
+              <label for="blog-email">Email Address</label>
+              <input type="text" name="blog-email" id="blog-email">
+            </form>
+          </div> <!-- end of email and username container -->
+        </div>
+        
         <div class="comment-box-container">
           <form action="#" method="#" class="blog-comment-form" name="blog-comment-form">
             <label for="blog-comment-box">Comment</label>
             <input type="text" name="blog-comment-box" id="blog-comment-box">
           </form>
         </div><!-- end of comment box  -->
+
         <button>Post Comment</button>
       </div> <!-- end of wrapper -->
     </section> <!-- end of comment section -->
