Added to blog forms

--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,6 @@
             </div>
           </div> <!-- end of comment 2 -->
         </div> <!-- end of comment container -->
-        <div class="blog-forms-container">
           <div class="name-email-container">
             <form action="#" method="#" class="blog-name-form" name="blog-name-form">
               <label for="blog-username">Name</label>
@@ -113,11 +112,10 @@
               <input type="text" name="blog-email" id="blog-email">
             </form>
           </div> <!-- end of email and username container -->
-        </div>
         
         <div class="comment-box-container">
           <form action="#" method="#" class="blog-comment-form" name="blog-comment-form">
-            <label for="blog-comment-box">Comment</label>
+            <label for="blog-comment-box"></label>
             <input type="text" name="blog-comment-box" id="blog-comment-box">
           </form>
         </div><!-- end of comment box  -->
