--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
   <!-- Header Section -->
   <header id="blog" class="blog-header">
     <div class="wrapper">
-      <div class="header-top">
+      <div class="blog-header-top">
         <h2>Sanctuary Helpers</h2>
         <nav>
           <ul>
@@ -49,10 +49,11 @@
             <h2>Finding the right pieces for new space</h2>
             <h5>Monday, October 5th, 2019 by Saron</h5>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, repellat pariatur dolore modi veritatis autem est debitis deleniti similique eum suscipit inventore et libero, sint fugiat labore vitae cumque id.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit eligendi modi quis earum quos recusandae autem similique blanditiis non dolores consequuntur minus quasi, error cum distinctio eveniet, ex sapiente necessitatibus?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit eligendi modi quis earum quos recusandae autem similique blanditiis non dolores consequuntur minus quasi, error cum distinctio eveniet, ex sapiente necessitatibus? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam quasi sint ad! Non deleniti voluptatem molestiae sequi est perferendis unde enim quasi facere quibusdam! Facilis officiis sint accusantium aperiam iure.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit libero, ipsa labore aliquid cum fuga porro ullam eius voluptatibus exercitationem iste. Nesciunt aut provident in? Excepturi aut ea reprehenderit et!
             Commodi sit tempora magni libero ut illo repudiandae autem, ea totam enim in aut, expedita possimus itaque dignissimos praesentium non porro nihil rerum iusto saepe natus sequi recusandae culpa? Rem?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae debitis labore aspernatur, hic facilis laborum cumque suscipit dolorum corporis obcaecati quia repellat harum eaque neque maxime! Alias, at neque!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae debitis labore aspernatur, hic facilis laborum cumque suscipit dolorum corporis obcaecati quia repellat harum eaque neque maxime! Alias, at neque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, perferendis nisi quis impedit, ipsum nulla laboriosam aliquid aliquam repudiandae corrupti est, ut repellendus vero nihil ad temporibus facilis esse modi!
+            Molestiae sint enim consequatur, officiis corrupti fugiat vel similique perspiciatis ratione dolore facere hic, ullam laudantium deserunt velit nostrum unde esse et doloribus recusandae, quas voluptatibus? Sint corrupti illum quo.</p>
           </div>
         </div> <!-- end blog left -->
         <div class="blog-right">
