Started mobile page for contact but its hard lol

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Page</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -89,17 +89,18 @@
          
         </div><!-- end of contact info -->
       </div> <!-- end of wrapper -->
-    </section> <!-- end of contact section -->
-
+    </section> <!-- end of contact section -->   
   </main>
+
+
 
     <!-- Footer Section -->
 
-    <footer>
+  <footer>
 
-      <p>Copyright 2019, HackerYou</p>
+    <p>Copyright 2019, HackerYou</p>
 
-    </footer>
+  </footer>
 
 </body>
 </html>
