--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@
         <nav>
           <ul>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li>
-              <a href="">About</a>
+              <a href="./index.html #about">About</a>
             </li>
             <li>
-              <a href="/blog.html">Blog</a>
+              <a href="./blog.html">Blog</a>
             </li>
             <li>
               <a href="#contact">Contact</a>
