--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="/blog.html">Blog</a>
+            <a href="./blog.html">Blog</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="./contact.html">Contact</a>
           </li>
         </ul>
       </nav>
