Added an alert when you submit a comment

--- a/blog.html
+++ b/blog.html
@@ -132,5 +132,16 @@
     <p> Copyright of 2019 HackerYou</p>
   </footer>
   
+  <script>
+
+    const submitButton = document.querySelector('button')
+
+    submitButton.addEventListener('click', () => {
+      alert("Your comment has been submitted");
+    })
+
+
+  </script>
+
 </body>
 </html>
